# SmartOneHandWriter

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cpp  wordlist_it.txt
app/macos/: Info.plist  README.md  build_macos.sh
app/macos/CMotore/: module.modulemap  shim.h
app/macos/Sources/: AppController.swift  Bindings.swift  Clipboard.swift  EventTap.swift  Motore.swift  Overlay.swift  Panel.swift  Permissions.swift  main.swift
app/windows/: CMakeLists.txt  main.cpp
cli/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/motore/: motore_c.h
core/include/onehand/: engine.hpp  ngram_predictor.hpp  onehand_c.h  predictor.hpp  types.hpp
core/include/sohw/: smartcore_c.h
core/src/: alterations.cpp  alterations.hpp  config.cpp  dictionary.cpp  dictionary.hpp  engine.cpp  ngram_predictor.cpp  onehand_c.cpp  predictor_frequency.cpp  utf8.cpp  utf8.hpp
core/src/motore/: engine.cpp  engine.hpp  motore_c.cpp  types.hpp
core/src/sohw/: bigram_format.hpp  bigram_model.cpp  bigram_model.hpp  bigram_predictor.cpp  bigram_predictor.hpp  candidate_provider.cpp  candidate_provider.hpp  core.cpp  core.hpp  predictor.hpp  smartcore_c.cpp  types.hpp
core/tests/: abi_tests.cpp  bigram_tests.cpp  dict_tests.cpp  engine_tests.cpp  motore_c_tests.cpp  motore_tests.cpp  provider_tests.cpp  sohw_tests.cpp
data/: config.json  tasti.conf
docs/: ARCHITETTURA.md  CORE-nuova-concezione.md
docs/plans/: 01-t9-rewrite.md  02-core-nuova-concezione.md  03-frontend-windows.md  04-engine-state-improvements.md  README.md
gui/qt/: CMakeLists.txt  main.cpp
gui/win32/: CMakeLists.txt  main.cpp
platform/macos/: main.swift
platform/windows/: CMakeLists.txt  main_win32.cpp
tools/build_bigrams/: CMakeLists.txt  build_bigrams.cpp
